# pet_project_poker

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/game_logic/: betting.py  dealing_cards.py  hand_evaluator.py  main.py
backend/app/models/: card.py  deck.py  player.py
backend/utils/: constants.py  error_handler.py  poker_utils.py
